# libsemver

./: .gitignore  Makefile  README.md  meson.build  meson_options.txt
.github/workflows/: build.yml  ci.yml  lint.yml
doc/: meson.build
lib/: Specification.vala  Util.vala  Version.vala  meson.build
tests/: SpecificationTest.vala  UtilTest.vala  VersionTest.vala  meson.build
